# c2o-overnight-strategy

./: .gitignore  AGENTS.md  C2O_report.tex  README.md  innovation_declaration.md  pyproject.toml  quantstat_tearsheet_250M.html
config/: default.yaml  fast.yaml
data/intermediary/: exp2_results.csv  exp_results.csv
data/outputs/20260606_173124/: manifest.json
data/outputs/20260606_173124/reports/: C2O_tearsheet_250M.html
data/outputs/20260606_173124/tables/: step2_binding_250M.csv  step4b_ic_compare.csv  step5_annual_breakdown.csv  step5_concentration_sweep.csv  step5_gross_to_net_decomposition.csv  step5_headline_3aum.csv  step5_robustness_grid.csv  step5_stress_windows.csv
data/outputs/20260607_131054/: manifest.json
data/outputs/20260607_131054/tables/: step1_reconciliation.csv  step1_universe_counts.csv  step3_borrow_tier_distribution.csv  step4b_ic_by_year.csv  step4b_ic_compare.csv  step4b_sleeve_corr.csv  step4b_sleeve_ic.csv  step5_annual_breakdown.csv  step5_concentration_sweep.csv  step5_frontier_3aum.csv  step5_gross_to_net_decomposition.csv  step5_headline_3aum.csv  step5_robustness_grid.csv  step5_sharpe_ladder.csv  step5_sleeve_return_corr.csv  (+1 more)
docs/: C2O_Steps4b-5_Worklog.md
report/: C2O_report.tex  innovation_declaration.md
src/c2o/: alpha.py  borrow.py  capacity.py  config.py  dl_alpha.py  io.py  main.py  metrics.py  panel.py  portfolio.py  reporting.py
tests/: conftest.py  test_alpha.py  test_borrow.py  test_capacity.py  test_metrics.py  test_panel.py  test_portfolio.py  test_smoke.py
tools/: experiment.py  experiment2.py
